[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
dependencies = [
  "atari_py",
  "gym[accept-rom-license]",
  "gym[atari]",
  "pettingzoo==1.17.0",
  "ray[rllib]",
  "ray[default]",
  "supersuit",
  "SuperSuit",
  "tensorflow",
  "torch"
]
name = "rllib-multi-agent"
version = "0.0.1"
