[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
dependencies = [
  "atari_py",
  "gym[accept-rom-license]",
  "gym[atari]",
  "pettingzoo[butterfly]==1.17.0",
  "pyglet",
  "ray[default,rllib]",
  "supersuit",
  "SuperSuit",
  "tensorflow",
  "torch"
]
name = "rllib-multi-agent"
version = "0.0.1"
